--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.1",
   "description": "Easy encryption.",
   "manifest_version": 2,
-  "options_page": "options.html",
+  "options_page": "options/options.html",
   "background": {
     "scripts": [
       "cryptojs/rollups/aes.js",
