--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
       "cryptojs/rollups/rabbit.js",
       "cryptojs/rollups/rc4.js",
       "cryptojs/rollups/tripledes.js",
+      "cryptojs/lib-typedarrays.js",
       "script.js"
     ]
   },
