--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-
-# OS generated files #
-######################
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -8,3 +6,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# JetBrains IDE files
+.idea
